tests/files/flow_controller_tests/should_fail/011.cmdr
//Should fail due to non existent file
read "does_not_exist.txt";